--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -26,7 +26,7 @@
     ],
     "Enabled": false
   },
-  
+
   "AutoFixer": {
   "MechDefAutoFixAgainstMaxFreeTonnage" : [
         ],
@@ -463,7 +463,7 @@
     "MechLabGeneralWidgetEnabled": true,
     "MechLabArmTopPadding": 120,
     "MechLabGeneralSlots": 2,
-	"MechLabGeneralWidgetLabel" : "Hand Held"
+	"MechLabGeneralWidgetLabel" : "Hand Held",
     "Enabled": true
   },
   "MoveMultiplierStat": {
