--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -510,7 +510,7 @@
         "EnabledDescription" : "Makes the mech lab adhere to any custom mech slot counts.",
         "MechLabArmTopPadding" : 120,
         "MechLabGeneralSlots" : 2,
-        "MechLabGeneralWidgetLabel" : "Hand Held"
+        "MechLabGeneralWidgetLabel" : "Hand Held & Quirks"
     },
     "MoveMultiplierStat" : {
         "Enabled" : true,
