--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -463,7 +463,7 @@
     "MechLabGeneralWidgetEnabled": true,
     "MechLabArmTopPadding": 120,
     "MechLabGeneralSlots": 2,
-	"MechLabGeneralWidgetLabel" : "Hand Held"
+	"MechLabGeneralWidgetLabel" : "Hand Held & Quirks"
     "Enabled": true
   },
   "MoveMultiplierStat": {
