--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -462,8 +462,8 @@
   "MechLabSlots": {
     "MechLabGeneralWidgetEnabled": true,
     "MechLabArmTopPadding": 120,
-    "MechLabGeneralSlots": 2,
-	"MechLabGeneralWidgetLabel" : "Hand Held & Quirks",
+    "MechLabGeneralSlots": 3,
+	"MechLabGeneralWidgetLabel" : "Specials",
     "Enabled": true
   },
   "MoveMultiplierStat": {
