--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -509,8 +509,8 @@
         "Enabled" : true,
         "EnabledDescription" : "Makes the mech lab adhere to any custom mech slot counts.",
         "MechLabArmTopPadding" : 120,
-        "MechLabGeneralSlots" : 2,
-        "MechLabGeneralWidgetLabel" : "Hand Held & Quirks"
+        "MechLabGeneralSlots" : 3,
+        "MechLabGeneralWidgetLabel" : "Specialist"
     },
     "MoveMultiplierStat" : {
         "Enabled" : true,
