--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -463,7 +463,7 @@
     "MechLabGeneralWidgetEnabled": true,
     "MechLabArmTopPadding": 120,
     "MechLabGeneralSlots": 3,
-	"MechLabGeneralWidgetLabel" : "Specials",
+	"MechLabGeneralWidgetLabel" : "Specialist",
     "Enabled": true
   },
   "MoveMultiplierStat": {
