--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER20.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER20.json
@@ -35,11 +35,11 @@
                 },
 	"HandHeld" : {
 	"Tonnage" : 2,
-	"TwoHand" : false
+	"HandUsed": 0
 }
   },
   "Category": "NotSet",
-  "CategoryID": "HandHeld",
+  "CategoryID": "BoltOn",
   "Type": "LRM",
   "WeaponSubType": "LRM20",
   "MinRange": 0,
