--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
@@ -33,11 +33,11 @@
                 },
 	"HandHeld" : {
 	"Tonnage" : 0.5,
-	"TwoHand" : false
+	"HandUsed": 0
 }
   },
   "Category": "NotSet",
-  "CategoryID": "HandHeld",
+  "CategoryID": "BoltOn",
   "Type": "LRM",
   "WeaponSubType": "LRM5",
   "MinRange": 0,
