--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -513,5 +513,19 @@
   },
   "TurretMechComponents": {
     "Enabled": true
-  }
+  },
+    "TagManager" : {
+        "Enabled" : false,
+        "SkirmishWhitelistTags" : [],
+		"WhitelistComponentTags" : [],
+        "BlacklistComponentTags" : [
+            "component_type_stock",
+            "component_type_variant",
+            "component_type_lostech"
+        ],
+    },
+  "DebugScreenshotMechs" : {
+        "Enabled" : false,
+		"ScreenshotDirectoryPath" : "Screenshots",
+	}
 }
