--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -590,17 +590,17 @@
         "LostechStockWeaponVariantFix" : true,
         "LostechStockWeaponVariantDescription" : "Fixes lostech variant weapon tagging by checking if id ends with -STOCK.",
         "SkirmishWhitelistTags" : [
-            "component_type_stock"
+            
         ],
         "SkirmishWhitelistTagsDescription" : "Components with these tags will appear in the skirmish mechlab, blacklisted tagged items never appear.",
         "WhitelistComponentTags" : [
-            "component_type_stock",
-            "component_type_variant",
-            "component_type_lostech"
+            
         ],
         "WhitelistComponentTagsDescription" : "Whitelists components with specified tags.",
         "BlacklistComponentTags" : [
-            
+            "component_type_stock",
+            "component_type_variant",
+            "component_type_lostech"
         ],
         "BlacklistComponentTagsDescription" : "Blacklists components with specified tags, has precedence over whitelisting.",
         "WhitelistMechTags" : [
@@ -624,7 +624,7 @@
     "DebugScreenshotMechs" : {
         "Enabled" : false,
         "EnabledDescription" : "Edit a mech then cancel, it then will go through all mechs and make screenshots for them. To improve loading times use the TagManager to blacklist all components so the MechLab doesn't have to load them.",
-        "ScreenshotDirectoryPath" : "screenshots",
+        "ScreenshotDirectoryPath" : "Screenshots",
         "ScreenshotDirectoryPathDescription" : "Create the directory manually first, otherwise it won't save any of the images."
     }
 }
