--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
@@ -3,7 +3,10 @@
     "Category": [
       {
         "CategoryID": "w/s/h/BoltOn"
-      }
+      },
+	  {
+            "CategoryID": "Special"
+        }
     ],
     "ComponentExplosion": {
       "ExplosionDamagePerAmmo": 4,
@@ -33,7 +36,7 @@
                 },
 	"HandHeld" : {
 	"Tonnage" : 0.5,
-	"HandUsed": 0
+	"HandsUsed": 0
 }
   },
   "Category": "NotSet",
@@ -86,7 +89,7 @@
     "Purchasable": true,
     "Manufacturer": "Death Blossom",
     "Model": "Rocket Launcher",
-    "UIName": "Rocket 5",
+    "UIName": "Bolt On Rocket 5",
     "Id": "BoltOn_LRM_ROCKETLAUNCHER5",
     "Name": "RL5",
     "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. Developed by the Marian Hegemony, they often replace more sophisticated equipment that the Periphery nation cannot afford or is unable to repair.<b><color=#F79232>1 SHOT!</color> <b><color=#099ff2>VOLATILE!</color></b>",
