--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER20.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER20.json
@@ -3,7 +3,10 @@
     "Category": [
       {
         "CategoryID": "w/s/h/BoltOn"
-      }
+      },
+	  {
+            "CategoryID": "Special"
+        }
     ],
     "ComponentExplosion": {
       "ExplosionDamagePerAmmo": 1,
@@ -35,7 +38,7 @@
                 },
 	"HandHeld" : {
 	"Tonnage" : 2,
-	"HandUsed": 0
+	"HandsUsed": 0
 }
   },
   "Category": "NotSet",
@@ -89,7 +92,7 @@
     "Purchasable": true,
     "Manufacturer": "Death Blossom",
     "Model": "Rocket Launcher",
-    "UIName": "I-Rocket 20",
+    "UIName": "Bolt On I-Rocket 20",
     "Id": "BoltOn_LRM_INFERNOLAUNCHER20",
     "Name": "RL20",
     "Details": "Rocket Launchers are cheap, unguided, one-shot missile launchers. Someone took these warheads and replaced their payload with Inferno Gel. <b><color=#F79232>1 SHOT!</color> <b><color=#099ff2>VOLATILE!</color></b>",
