--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
@@ -4,9 +4,7 @@
       {
         "CategoryID": "w/s/h/BoltOn"
       },
-	  {
-            "CategoryID": "Special"
-        }
+	  { "CategoryID": "BoltOn" }
     ],
     "ComponentExplosion": {
       "ExplosionDamagePerAmmo": 4,
