Updated HM story to not include Rep_me

--- a/RogueHeavyMetalModule/milestoneSets/ms_fp_HM1_ofUnknownOrigin.json
+++ b/RogueHeavyMetalModule/milestoneSets/ms_fp_HM1_ofUnknownOrigin.json
@@ -296,7 +296,7 @@
                                 "",
                                 "HM1_ofUnknownOrigin_2_3wayBattle",
                                 "Kurita",
-                                "BaumannGroup",
+                                "Locals",
                                 "4",
                                 "ms_fp_HM1_ofUnknownOrigin_006_Talk3",
                                 null,
@@ -554,7 +554,7 @@
                                 "",
                                 "HM1_ofUnknownOrigin_a1_destroyBase",
                                 "Kurita",
-                                "BaumannGroup",
+                                "Locals",
                                 "4",
                                 "ms_fp_HM1_ofUnknownOrigin_101_A-Talk",
                                 null,
@@ -795,7 +795,7 @@
                                 "",
                                 "HM1_ofUnknownOrigin_b1_rescue",
                                 "Kurita",
-                                "BaumannGroup",
+                                "Locals",
                                 "4",
                                 "ms_fp_HM1_ofUnknownOrigin_201_B-Talk",
                                 null,
