--- a/RogueHeavyMetalModule/milestoneSets/ms_fp_HM3_huntingSeason.json
+++ b/RogueHeavyMetalModule/milestoneSets/ms_fp_HM3_huntingSeason.json
@@ -164,14 +164,14 @@
                                 "",
                                 "HM3_huntingSeason_1_3wayBattle",
                                 "SelfEmployed_Farah",
-                                "BaumannGroup",
+                                "Locals",
                                 "5",
                                 "ms_fp_HM3_huntingSeason_004_Talk",
                                 null,
                                 null,
                                 null,
                                 null,
-                                "BountyHunterAssociates"
+                                "Locals"
                             ]
                         },
                         {
