--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -109,7 +109,7 @@
     "ChassisDefSlotsChanges": null,
     "ChassisDefInitialTonnage": false,
     "ChassisDefInitialToTotalTonnageFactor": 0.1,
-    "ChassisDefMaxJumpjets": true,
+    "ChassisDefMaxJumpjets": false,
     "ChassisDefMaxJumpjetsCount": 100,
     "ChassisDefMaxJumpjetsRating": 400,
     "AutoFixWeaponDefSlotsChanges": [
