--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -128,7 +128,7 @@
         "ChassisDefSlotsChanges" : null,
         "ChassisDefInitialTonnage" : false,
         "ChassisDefInitialToTotalTonnageFactor" : 0.1,
-        "ChassisDefMaxJumpjets" : true,
+        "ChassisDefMaxJumpjets" : false,
         "ChassisDefMaxJumpjetsCount" : 100,
         "ChassisDefMaxJumpjetsRating" : 400,
         "WeaponDefTagsSkip" : [
