apparently ME become case sensetive in hardpontdefs

--- a/MechEngineer/Settings.json
+++ b/MechEngineer/Settings.json
@@ -194,7 +194,7 @@
           "ac2",
           "ac",
           "lbx",
-	  "PPC",
+	  "ppc",
           "ams"
         ]
       },
@@ -247,7 +247,7 @@
           "uac5",
           "ac",
           "lbx",
-		  "PPC",
+		  "ppc",
           "ams"
         ]
       },
@@ -258,14 +258,14 @@
           "lbx10",
           "ac",
           "lbx",
-		  "PPC",
+		  "ppc",
           "ams"
         ]
       },
 	  {
         "PrefabIdentifier": "PPC",
         "HardpointCandidates": [
-			"PPC",
+			"ppc",
           "ac20",
           "ac",
           "lbx",
@@ -280,7 +280,7 @@
           "ac20",
           "ac",
           "lbx",
-		  "PPC",
+		  "ppc",
           "ams"
         ]
       },
@@ -292,7 +292,7 @@
 		  "uac",
           "ac",
           "lbx",
-		  "PPC",
+		  "ppc",
           "ams"
         ]
       },
@@ -304,7 +304,7 @@
           "gauss",
           "ac20",
           "ac",
-		  "PPC",
+		  "ppc",
           "lbx",
           "laser",
           "ams"
@@ -316,7 +316,7 @@
           "gauss",
           "ac20",
           "ac",
-		  "PPC",
+		  "ppc",
           "lbx",
           "laser",
           "ams"
@@ -330,7 +330,7 @@
           "gauss",
           "ac",
           "lbx",
-		  "PPC",
+		  "ppc",
           "ams",
 		  "machinegun",
           "mg",
