add some illegal factions to FPenabler excludes

--- a/RogueFlashPointModule/settings.json
+++ b/RogueFlashPointModule/settings.json
@@ -9,7 +9,9 @@
 		"SelfEmployed",
 		"selfemployed",
 		"Player1sMercUnit",
+		"player1smercunit",
 		"Player2sMercUnit",
+		"player2smercunit",
 		"Owner",
 		"owner",
 		"Unknown",
