--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -227,6 +227,8 @@
         "AllowDefaultLoadoutWeaponsDescription" : "Ignore limits that would prevent mounting default loadouts.",
         "CreateVanillaFallbackPrefabs" : false,
         "CreateVanillaFallbackPrefabsDescription" : "If no mapping can be found, use the vanilla mapping code (which unfortunatly maps SRM to UAC), fixes mortar issues",
+        "AutoFixHardpointDataDefs" : true,
+        "AutoFixHardpointDataDefsDescription" : "HardpointDataDef should not contain duplicates and be grouped by slot (mh1 < mh2, eh1 = mh1).",
         "WeaponPrefabMappings" : [
             {
                 "PrefabIdentifier" : "AC2",
