--- a/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER_AMS.json
+++ b/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER_AMS.json
@@ -18,6 +18,8 @@
                 "AMSAcc: 80%",
                 "AMSShots: 10",
                 "InternalAmmo: 1",
+				"Visibility: +2%",
+                "Signature: +2%",
 				"BoltOnWeight: 1"
             ]
         },
@@ -110,7 +112,60 @@
     "AllowedLocations": "CenterTorso",
     "DisallowedLocations": "All",
     "CriticalComponent": false,
-    "statusEffects": [],
+    "statusEffects": [
+	{
+                    "durationData": {
+                        "duration": -1,
+                        "stackLimit": -1
+                    },
+                    "targetingData": {
+                        "effectTriggerType": "Passive",
+                        "effectTargetType": "Creator",
+                        "showInTargetPreview": false,
+                        "showInStatusPanel": false
+                    },
+                    "effectType": "StatisticEffect",
+                    "Description": {
+                        "Id": "BoltOnPenaltySensor",
+                        "Name": "BoltOn Sensor Penalty",
+                        "Details": "Signature Statuseffect.",
+                        "Icon": "uixSvgIcon_equipment_TTS"
+                    },
+                    "nature": "Buff",
+                    "statisticData": {
+                        "statName": "SensorSignatureModifier",
+                        "operation": "Float_Multiply",
+                        "modValue": "1.02",
+                        "modType": "System.Single"
+                    }
+                },
+				{
+            "durationData": {
+                "duration": -1,
+                "stackLimit": -1
+            },
+            "targetingData": {
+                "effectTriggerType": "Passive",
+                "effectTargetType": "Creator",
+                "showInTargetPreview": false,
+                "showInStatusPanel": false
+            },
+            "effectType": "StatisticEffect",
+            "Description": {
+                "Id": "BoltOnPenaltyVisual",
+                "Name": "BoltOn Visual Penalty",
+                "Details": "Visibility Statuseffect.",
+                "Icon": "uixSvgIcon_equipment_TTS"
+            },
+            "nature": "Buff",
+            "statisticData": {
+                "statName": "SpottingVisibilityMultiplier",
+                "operation": "Float_Multiply",
+                "modValue": "1.02",
+                "modType": "System.Single"
+            }
+        },
+	],
     "ComponentTags": {
         "items": [
             "component_type_stock",
