--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER10.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER10.json
@@ -19,6 +19,8 @@
         "AMSChance: -30%",
         "Inferno: 1",
         "IsInfernoRocket: 10",
+		"Visibility: +2%",
+                "Signature: +2%",
         "InternalAmmo: 1",
 		"BoltOnWeight: 1"
       ]
@@ -108,6 +110,58 @@
   "DisallowedLocations": "All",
   "CriticalComponent": false,
   "statusEffects": [
+  {
+                    "durationData": {
+                        "duration": -1,
+                        "stackLimit": -1
+                    },
+                    "targetingData": {
+                        "effectTriggerType": "Passive",
+                        "effectTargetType": "Creator",
+                        "showInTargetPreview": false,
+                        "showInStatusPanel": false
+                    },
+                    "effectType": "StatisticEffect",
+                    "Description": {
+                        "Id": "BoltOnPenaltySensor",
+                        "Name": "BoltOn Sensor Penalty",
+                        "Details": "Signature Statuseffect.",
+                        "Icon": "uixSvgIcon_equipment_TTS"
+                    },
+                    "nature": "Buff",
+                    "statisticData": {
+                        "statName": "SensorSignatureModifier",
+                        "operation": "Float_Multiply",
+                        "modValue": "1.02",
+                        "modType": "System.Single"
+                    }
+                },
+				{
+            "durationData": {
+                "duration": -1,
+                "stackLimit": -1
+            },
+            "targetingData": {
+                "effectTriggerType": "Passive",
+                "effectTargetType": "Creator",
+                "showInTargetPreview": false,
+                "showInStatusPanel": false
+            },
+            "effectType": "StatisticEffect",
+            "Description": {
+                "Id": "BoltOnPenaltyVisual",
+                "Name": "BoltOn Visual Penalty",
+                "Details": "Visibility Statuseffect.",
+                "Icon": "uixSvgIcon_equipment_TTS"
+            },
+            "nature": "Buff",
+            "statisticData": {
+                "statName": "SpottingVisibilityMultiplier",
+                "operation": "Float_Multiply",
+                "modValue": "1.02",
+                "modType": "System.Single"
+            }
+        },
     {
       "durationData": {
         "duration": 2,
