--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER15.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER15.json
@@ -18,6 +18,8 @@
         "AMSChance: -30%",
         "IsRocket: 15",
         "InternalAmmo: 4",
+		"Visibility: +3%",
+                "Signature: +3%",
 		"BoltOnWeight: 1.5"
       ]
     },
@@ -105,7 +107,58 @@
   "DisallowedLocations": "All",
   "CriticalComponent": false,
   "statusEffects": [
-
+	{
+                    "durationData": {
+                        "duration": -1,
+                        "stackLimit": -1
+                    },
+                    "targetingData": {
+                        "effectTriggerType": "Passive",
+                        "effectTargetType": "Creator",
+                        "showInTargetPreview": false,
+                        "showInStatusPanel": false
+                    },
+                    "effectType": "StatisticEffect",
+                    "Description": {
+                        "Id": "BoltOnPenaltySensor",
+                        "Name": "BoltOn Sensor Penalty",
+                        "Details": "Signature Statuseffect.",
+                        "Icon": "uixSvgIcon_equipment_TTS"
+                    },
+                    "nature": "Buff",
+                    "statisticData": {
+                        "statName": "SensorSignatureModifier",
+                        "operation": "Float_Multiply",
+                        "modValue": "1.03",
+                        "modType": "System.Single"
+                    }
+                },
+				{
+            "durationData": {
+                "duration": -1,
+                "stackLimit": -1
+            },
+            "targetingData": {
+                "effectTriggerType": "Passive",
+                "effectTargetType": "Creator",
+                "showInTargetPreview": false,
+                "showInStatusPanel": false
+            },
+            "effectType": "StatisticEffect",
+            "Description": {
+                "Id": "BoltOnPenaltyVisual",
+                "Name": "BoltOn Visual Penalty",
+                "Details": "Visibility Statuseffect.",
+                "Icon": "uixSvgIcon_equipment_TTS"
+            },
+            "nature": "Buff",
+            "statisticData": {
+                "statName": "SpottingVisibilityMultiplier",
+                "operation": "Float_Multiply",
+                "modValue": "1.03",
+                "modType": "System.Single"
+            }
+        },
   ],
   "ComponentTags": {
     "items": [
