--- a/RogueModuleTech/Quirks/PositiveQuirks/Special_Easy_To_Maintain.json
+++ b/RogueModuleTech/Quirks/PositiveQuirks/Special_Easy_To_Maintain.json
@@ -1,8 +1,6 @@
 {
     "Custom": {
-		"Category": [{
-			"CategoryID": "Special"
-		},
+		"Category": [
 		{
 			"CategoryID": "PositiveQuirk"
 		}],
@@ -35,10 +33,6 @@
 		},
 		"MechConfiguration" : {
 					
-		},
-		"HandHeld" : {
-			"HandsUsed": 0,
-			"Tonnage" : 0
 		}
     },
     "StatName": null,
