Addded Gamesworld tag to some more planets

--- a/InnerSphereMap/StarSystems/starsystemdef_KookensPleasurePit.json
+++ b/InnerSphereMap/StarSystems/starsystemdef_KookensPleasurePit.json
@@ -23,6 +23,7 @@
       "planet_industry_recreation",
       "planet_industry_agriculture",
       "planet_other_blackmarket",
+      "planet_other_gamesworld",
       "planet_faction_steiner"
     ],
     "tagSetSourceFile": ""
