--- a/RogueModuleTech/Quirks/PositiveQuirks/Special_Easy_To_Maintain.json
+++ b/RogueModuleTech/Quirks/PositiveQuirks/Special_Easy_To_Maintain.json
@@ -28,7 +28,9 @@
 		  "flags": [
 			"not_broken",
 			"not_destroyed",
-			"default"
+			"default",
+			"ignore_damage",
+			"no_salvage"
 		  ]
 		},
 		"MechConfiguration" : {
