--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -191,6 +191,6 @@
 "FiringPreviewRecalcTrottle":0,
 "SelectionStateMoveBaseProcessMousePosTrottle": 4,
 "UpdateReticleTrottle":8,
-"showMissBehavior":"false",
+"showMissBehavior":"Default",
 "extendedBraceBehavior":true
 }
