--- a/MechEngineer/Settings.last.json
+++ b/MechEngineer/Settings.last.json
@@ -222,8 +222,10 @@
         "EnforceHardpointLimitsDescription" : "Enforces hardpoint limits in mechlab only allowing configured prefabs.",
         "AllowDefaultLoadoutWeapons" : false,
         "AllowDefaultLoadoutWeaponsDescription" : "Ignore limits that would prevent mounting default loadouts.",
-        "CreateVanillaFallbackPrefabs" : false,
-        "CreateVanillaFallbackPrefabsDescription" : "If no mapping can be found, use the vanilla mapping code (which unfortunatly maps SRM to UAC), fixes mortar issues",
+        "FallbackPrefabsForComponentDefIds" : [
+            "Weapon_Mortar_MechMortar"
+        ],
+        "FallbackPrefabsForComponentDefIdsDescription" : "A list of components that always should be assigned a weapon prefab to.",
         "AutoFixHardpointDataDefs" : true,
         "AutoFixHardpointDataDefsDescription" : "HardpointDataDef should not contain duplicates and be grouped by slot (mh1 < mh2, eh1 = mh1).",
         "WeaponPrefabMappings" : [
@@ -654,6 +656,8 @@
         "Enabled" : false,
         "EnabledDescription" : "Edit a mech then cancel, it then will go through all mechs and make screenshots for them. To improve loading times use the TagManager to blacklist all components so the MechLab doesn't have to load them.",
         "ScreenshotDirectoryPath" : "Screenshots",
-        "ScreenshotDirectoryPathDescription" : "Create the directory manually first, otherwise it won't save any of the images."
+        "OnlyInvalidMechs" : true,
+        "ScreenshotDirectoryPathDescription" : "Create the directory manually first, otherwise it won't save any of the images.",
+        "OnlyInvalidMechsDescription" : "Only make screenshots of mechs with invalid configurations."
     }
 }
