--- a/CustomAmmoCategories/CharlesB_settings.json
+++ b/CustomAmmoCategories/CharlesB_settings.json
@@ -1,19 +1,19 @@
 {
-  "attackMissInstability": true,
+  "attackMissInstability": false,
   "attackMissInstabilityPercent": 30,
   "attackMissInstabilityLeggedPercent": 70,
 
-  "dfaMissInstability": true,
+  "dfaMissInstability": false,
   "dfaMissInstabilityPercent": 40,
   "dfaMissInstabilityLeggedPercent": 80,
 
-  "pilotingSkillInstabilityMitigation": true,
-  "pilotingSkillDFASelfDamageMitigation": true,
-  "pilotingSkillFallingDamageMitigation": true,
+  "pilotingSkillInstabilityMitigation": false,
+  "pilotingSkillDFASelfDamageMitigation": false,
+  "pilotingSkillFallingDamageMitigation": false,
 
-  "allowSteadyToKnockdownForMelee": true,
+  "allowSteadyToKnockdownForMelee": false,
 
-  "fallingDamage": true,
+  "fallingDamage": false,
   "fallingAmountDamagePerTon": 0.5,
 
   "debug": false
