fixed weaponcategories and stealth

--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
@@ -39,8 +39,7 @@
 	"HandsUsed" : false
 }
   },
-  "Category": "NotSet",
-  "CategoryID": "BoltOn",
+  "weaponCategoryID": "BoltOn",
   "Type": "LRM",
   "WeaponSubType": "LRM5",
   "MinRange": 0,
