--- a/RogueModuleTech/Widget/BoltOn/BoltOn_GrenadeLauncher_5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_GrenadeLauncher_5.json
@@ -28,8 +28,7 @@
 	"HandsUsed" : false
 }
   },
-  "Category": "NotSet",
-  "CategoryID": "BoltOn",
+  "weaponCategoryID": "BoltOn",
   "Type": "Autocannon",
   "WeaponSubType": "AC10",
   "MinRange": 180,
