--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER20.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER20.json
@@ -41,8 +41,7 @@
 	"HandsUsed" : false
 }
   },
-  "Category": "NotSet",
-  "CategoryID": "BoltOn",
+  "weaponCategoryID": "BoltOn",
   "Type": "LRM",
   "WeaponSubType": "LRM20",
   "MinRange": 0,
