--- a/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER5.json
@@ -44,8 +44,7 @@
 	"HandsUsed" : false
 }
   },
-  "Category": "NotSet",
-  "CategoryID": "BoltOn",
+  "weaponCategoryID": "BoltOn",
   "Type": "LRM",
   "WeaponSubType": "LRM5",
   "MinRange": 0,
