--- a/RogueModuleTech/Widget/BoltOn/BoltOn_GrenadeLauncher_5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_GrenadeLauncher_5.json
@@ -28,7 +28,7 @@
 	"HandsUsed" : false
 }
   },
-  "weaponCategoryID": "BoltOn",
+  "weaponCategoryID": "Special",
   "Type": "Autocannon",
   "WeaponSubType": "AC10",
   "MinRange": 180,
