--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_INFERNOLAUNCHER5.json
@@ -41,7 +41,7 @@
 	"HandsUsed" : false
 }
   },
-  "weaponCategoryID": "BoltOn",
+  "weaponCategoryID": "Special",
   "Type": "LRM",
   "WeaponSubType": "LRM5",
   "MinRange": 0,
