--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER15.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER15.json
@@ -39,7 +39,7 @@
 	"HandsUsed" : false
 }
   },
-  "weaponCategoryID": "BoltOn",
+  "weaponCategoryID": "Special",
   "Type": "LRM",
   "WeaponSubType": "LRM15",
   "MinRange": 0,
