--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
@@ -39,7 +39,7 @@
 	"HandsUsed" : false
 }
   },
-  "weaponCategoryID": "BoltOn",
+  "weaponCategoryID": "Special",
   "Type": "LRM",
   "WeaponSubType": "LRM5",
   "MinRange": 0,
