--- a/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER5.json
@@ -44,7 +44,7 @@
 	"HandsUsed" : false
 }
   },
-  "weaponCategoryID": "BoltOn",
+  "weaponCategoryID": "Special",
   "Type": "LRM",
   "WeaponSubType": "LRM5",
   "MinRange": 0,
