--- a/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER_AMS.json
+++ b/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER_AMS.json
@@ -48,7 +48,7 @@
       "IsPositiveToAlly": true
     }
   ],
-  "weaponCategoryID": "BoltOn",
+  "weaponCategoryID": "Special",
     "Type": "LRM",
     "WeaponSubType": "LRM5",
     "MinRange": 0,
