--- a/MissionControlRandom/settings.json
+++ b/MissionControlRandom/settings.json
@@ -1,6 +1,6 @@
 {
   "DebugMode": false,
-  "VersionCheck": true,
+  "VersionCheck": false,
   "DebugSkirmishMode": true,
   "DisableIfFlashpointContract": true,
   "RandomSpawns": {
