--- a/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER_AMS.json
+++ b/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER_AMS.json
@@ -51,11 +51,11 @@
     "Type": "LRM",
     "WeaponSubType": "LRM5",
     "MinRange": 0,
-    "MaxRange": 460,
+    "MaxRange": 120,
     "RangeSplit": [
-        100,
-        200,
-        400
+        30,
+        60,
+        90
     ],
     "AmmoCategory": "Rocket",
     "StartingAmmoCapacity": 50,
@@ -80,7 +80,7 @@
     "Instability": 1,
     "Unguided": true,
     "IsAMS": true,
-    "IsAAMS": true,
+    "IsAAMS": false,
     "AMSHitChance": 0.8,
     "AdditionalImpactVFX": "WFX_SmokeRedS",
     "AdditionalImpactVFXScaleX": 1,
