--- a/MissionControlNoRandom/settings.json
+++ b/MissionControlNoRandom/settings.json
@@ -17,7 +17,7 @@
   },
   "AdditionalLances": {
     "Enable": true,
-	"ExcludeContractTypes": ["SoloDuel", "DuoDuel"],
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel", "AttackDefend"],
 	"IsPrimaryObjectiveIn": ["SimpleBattle", "ThreeWayBattle", "DestroyBase"],
     "UseElites": false,
     "UseDialogue": true,
