Tidying BoltOns. No changes.

--- a/RogueModuleTech/Widget/BoltOn/BoltOn_GrenadeLauncher_5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_GrenadeLauncher_5.json
@@ -1,31 +1,34 @@
 {
   "Custom": {
     "Category": [
-      { "CategoryID": "w/s/h/BoltOn" },
-			{ "CategoryID": "BoltOn" }
+      {
+        "CategoryID": "w/s/h/BoltOn"
+      },
+      {
+        "CategoryID": "BoltOn"
+      }
     ],
     "InventorySorter": {
       "SortKey": "03013"
     },
     "BonusDescriptions": {
       "Bonuses": [
-	  "BoltOn: 8",
-	  "AreaOfEffect: 60",
-				"AreaOfEffectDmg: 8",
-        "IsMortar",		
+        "BoltOn: 8",
+        "AreaOfEffect: 60",
+        "AreaOfEffectDmg: 8",
+        "IsMortar",
         "NoAA",
         "Indirect",
-		"InternalAmmoShots: 40",
-		"Visibility: +16%",
-                "Signature: +16%"
+        "InternalAmmoShots: 40",
+        "Visibility: +16%",
+        "Signature: +16%"
       ]
     },
-	"MechConfiguration" : {
-                },
-	"HandHeld" : {
-	"Tonnage" : 8,
-	"HandsUsed" : false
-}
+    "MechConfiguration": {},
+    "HandHeld": {
+      "Tonnage": 8,
+      "HandsUsed": false
+    }
   },
   "weaponCategoryID": "Special",
   "Type": "Autocannon",
@@ -52,9 +55,9 @@
   "APMaxArmorThickness": 40,
   "APCriticalChanceMultiplier": 0.1,
   "AOECapable": true,
-   "AOERange": 60,
-   "AOEDamage": 8,
-   "AlwaysIndirectVisuals": true,
+  "AOERange": 60,
+  "AOEDamage": 8,
+  "AlwaysIndirectVisuals": true,
   "IndirectFireCapable": true,
   "RefireModifier": 0,
   "ShotsWhenFired": 4,
@@ -97,58 +100,58 @@
   "DisallowedLocations": "All",
   "CriticalComponent": false,
   "statusEffects": [
-	{
-                    "durationData": {
-                        "duration": -1,
-                        "stackLimit": -1
-                    },
-                    "targetingData": {
-                        "effectTriggerType": "Passive",
-                        "effectTargetType": "Creator",
-                        "showInTargetPreview": false,
-                        "showInStatusPanel": false
-                    },
-                    "effectType": "StatisticEffect",
-                    "Description": {
-                        "Id": "BoltOnPenaltySensor",
-                        "Name": "BoltOn Sensor Penalty",
-                        "Details": "Signature Statuseffect.",
-                        "Icon": "uixSvgIcon_equipment_TTS"
-                    },
-                    "nature": "Buff",
-                    "statisticData": {
-                        "statName": "SensorSignatureModifier",
-                        "operation": "Float_Multiply",
-                        "modValue": "1.16",
-                        "modType": "System.Single"
-                    }
-                },
-				{
-            "durationData": {
-                "duration": -1,
-                "stackLimit": -1
-            },
-            "targetingData": {
-                "effectTriggerType": "Passive",
-                "effectTargetType": "Creator",
-                "showInTargetPreview": false,
-                "showInStatusPanel": false
-            },
-            "effectType": "StatisticEffect",
-            "Description": {
-                "Id": "BoltOnPenaltyVisual",
-                "Name": "BoltOn Visual Penalty",
-                "Details": "Visibility Statuseffect.",
-                "Icon": "uixSvgIcon_equipment_TTS"
-            },
-            "nature": "Buff",
-            "statisticData": {
-                "statName": "SpottingVisibilityMultiplier",
-                "operation": "Float_Multiply",
-                "modValue": "1.16",
-                "modType": "System.Single"
-            }
-        }
+    {
+      "durationData": {
+        "duration": -1,
+        "stackLimit": -1
+      },
+      "targetingData": {
+        "effectTriggerType": "Passive",
+        "effectTargetType": "Creator",
+        "showInTargetPreview": false,
+        "showInStatusPanel": false
+      },
+      "effectType": "StatisticEffect",
+      "Description": {
+        "Id": "BoltOnPenaltySensor",
+        "Name": "BoltOn Sensor Penalty",
+        "Details": "Signature Statuseffect.",
+        "Icon": "uixSvgIcon_equipment_TTS"
+      },
+      "nature": "Buff",
+      "statisticData": {
+        "statName": "SensorSignatureModifier",
+        "operation": "Float_Multiply",
+        "modValue": "1.16",
+        "modType": "System.Single"
+      }
+    },
+    {
+      "durationData": {
+        "duration": -1,
+        "stackLimit": -1
+      },
+      "targetingData": {
+        "effectTriggerType": "Passive",
+        "effectTargetType": "Creator",
+        "showInTargetPreview": false,
+        "showInStatusPanel": false
+      },
+      "effectType": "StatisticEffect",
+      "Description": {
+        "Id": "BoltOnPenaltyVisual",
+        "Name": "BoltOn Visual Penalty",
+        "Details": "Visibility Statuseffect.",
+        "Icon": "uixSvgIcon_equipment_TTS"
+      },
+      "nature": "Buff",
+      "statisticData": {
+        "statName": "SpottingVisibilityMultiplier",
+        "operation": "Float_Multiply",
+        "modValue": "1.16",
+        "modType": "System.Single"
+      }
+    }
   ],
   "ComponentTags": {
     "items": [
