--- a/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
+++ b/RogueModuleTech/Widget/BoltOn/BoltOn_LRM_ROCKETLAUNCHER5.json
@@ -4,7 +4,9 @@
       {
         "CategoryID": "w/s/h/BoltOn"
       },
-	  { "CategoryID": "BoltOn" }
+      {
+        "CategoryID": "BoltOn"
+      }
     ],
     "ComponentExplosion": {
       "ExplosionDamagePerAmmo": 4,
@@ -12,31 +14,30 @@
     },
     "BonusDescriptions": {
       "Bonuses": [
-		"BoltOn: 0.5",
-		"WpnAccuracy: -2",
+        "BoltOn: 0.5",
+        "WpnAccuracy: -2",
         "1shot",
         "AMSChance: -30%",
         "IsRocket: 5",
         "InternalAmmo: 4",
-		"Visibility: +1%",
-                "Signature: +1%"
+        "Visibility: +1%",
+        "Signature: +1%"
       ]
     },
     "InventorySorter": {
       "SortKey": "03001"
     },
-	"Flags": {
+    "Flags": {
       "flags": [
         "not_broken",
-		"not_destroyed"
+        "not_destroyed"
       ]
     },
-		"MechConfiguration" : {
-                },
-	"HandHeld" : {
-	"Tonnage" : 0.5,
-	"HandsUsed" : false
-}
+    "MechConfiguration": {},
+    "HandHeld": {
+      "Tonnage": 0.5,
+      "HandsUsed": false
+    }
   },
   "weaponCategoryID": "Special",
   "Type": "LRM",
@@ -105,58 +106,58 @@
   "DisallowedLocations": "All",
   "CriticalComponent": false,
   "statusEffects": [
-	{
-                    "durationData": {
-                        "duration": -1,
-                        "stackLimit": -1
-                    },
-                    "targetingData": {
-                        "effectTriggerType": "Passive",
-                        "effectTargetType": "Creator",
-                        "showInTargetPreview": false,
-                        "showInStatusPanel": false
-                    },
-                    "effectType": "StatisticEffect",
-                    "Description": {
-                        "Id": "BoltOnPenaltySensor",
-                        "Name": "BoltOn Sensor Penalty",
-                        "Details": "Signature Statuseffect.",
-                        "Icon": "uixSvgIcon_equipment_TTS"
-                    },
-                    "nature": "Buff",
-                    "statisticData": {
-                        "statName": "SensorSignatureModifier",
-                        "operation": "Float_Multiply",
-                        "modValue": "1.01",
-                        "modType": "System.Single"
-                    }
-                },
-				{
-            "durationData": {
-                "duration": -1,
-                "stackLimit": -1
-            },
-            "targetingData": {
-                "effectTriggerType": "Passive",
-                "effectTargetType": "Creator",
-                "showInTargetPreview": false,
-                "showInStatusPanel": false
-            },
-            "effectType": "StatisticEffect",
-            "Description": {
-                "Id": "BoltOnPenaltyVisual",
-                "Name": "BoltOn Visual Penalty",
-                "Details": "Visibility Statuseffect.",
-                "Icon": "uixSvgIcon_equipment_TTS"
-            },
-            "nature": "Buff",
-            "statisticData": {
-                "statName": "SpottingVisibilityMultiplier",
-                "operation": "Float_Multiply",
-                "modValue": "1.01",
-                "modType": "System.Single"
-            }
-        }
+    {
+      "durationData": {
+        "duration": -1,
+        "stackLimit": -1
+      },
+      "targetingData": {
+        "effectTriggerType": "Passive",
+        "effectTargetType": "Creator",
+        "showInTargetPreview": false,
+        "showInStatusPanel": false
+      },
+      "effectType": "StatisticEffect",
+      "Description": {
+        "Id": "BoltOnPenaltySensor",
+        "Name": "BoltOn Sensor Penalty",
+        "Details": "Signature Statuseffect.",
+        "Icon": "uixSvgIcon_equipment_TTS"
+      },
+      "nature": "Buff",
+      "statisticData": {
+        "statName": "SensorSignatureModifier",
+        "operation": "Float_Multiply",
+        "modValue": "1.01",
+        "modType": "System.Single"
+      }
+    },
+    {
+      "durationData": {
+        "duration": -1,
+        "stackLimit": -1
+      },
+      "targetingData": {
+        "effectTriggerType": "Passive",
+        "effectTargetType": "Creator",
+        "showInTargetPreview": false,
+        "showInStatusPanel": false
+      },
+      "effectType": "StatisticEffect",
+      "Description": {
+        "Id": "BoltOnPenaltyVisual",
+        "Name": "BoltOn Visual Penalty",
+        "Details": "Visibility Statuseffect.",
+        "Icon": "uixSvgIcon_equipment_TTS"
+      },
+      "nature": "Buff",
+      "statisticData": {
+        "statName": "SpottingVisibilityMultiplier",
+        "operation": "Float_Multiply",
+        "modValue": "1.01",
+        "modType": "System.Single"
+      }
+    }
   ],
   "ComponentTags": {
     "items": [
