--- a/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER_AMS.json
+++ b/RogueModuleTech/Widget/BoltOn/Weapon_LRM_FLARELAUNCHER_AMS.json
@@ -2,10 +2,14 @@
     "Custom": {
         "Category": [
             {
-        "CategoryID": "w/s/h/BoltOn"
-      },
-	  { "CategoryID": "BoltOn" },
-	  { "CategoryID": "Flare" }
+                "CategoryID": "w/s/h/BoltOn"
+            },
+            {
+                "CategoryID": "BoltOn"
+            },
+            {
+                "CategoryID": "Flare"
+            }
         ],
         "ComponentExplosion": {
             "ExplosionDamagePerAmmo": 1,
@@ -13,41 +17,40 @@
         },
         "BonusDescriptions": {
             "Bonuses": [
-				"BoltOn: 1",
+                "BoltOn: 1",
                 "MissileAMS",
                 "AMSAcc: 80%",
                 "AMSShots: 10",
                 "InternalAmmo: 1",
-				"Visibility: +2%",
+                "Visibility: +2%",
                 "Signature: +2%"
             ]
         },
         "InventorySorter": {
             "SortKey": "03001"
         },
-		"MechConfiguration" : {
-                },
-	"HandHeld" : {
-	"Tonnage" : 1,
-	"HandsUsed" : false
-}
+        "MechConfiguration": {},
+        "HandHeld": {
+            "Tonnage": 1,
+            "HandsUsed": false
+        }
     },
-	  "Auras": [
-    {
-      "Id": "AMS",
-      "Name": "AMS",
-      "ReticleColor": "#800000",
-      "Range": 10,
-      "RemoveOnSensorLock": false,
-      "State": "Persistent",
-      "ApplySelf": false,
-      "HideOnNotSelected": true,
-      "AllyStealthAffection": "None",
-      "EnemyStealthAffection": "None",
-      "IsPositiveToAlly": true
-    }
-  ],
-  "weaponCategoryID": "Special",
+    "Auras": [
+        {
+            "Id": "AMS",
+            "Name": "AMS",
+            "ReticleColor": "#800000",
+            "Range": 10,
+            "RemoveOnSensorLock": false,
+            "State": "Persistent",
+            "ApplySelf": false,
+            "HideOnNotSelected": true,
+            "AllyStealthAffection": "None",
+            "EnemyStealthAffection": "None",
+            "IsPositiveToAlly": true
+        }
+    ],
+    "weaponCategoryID": "Special",
     "Type": "LRM",
     "WeaponSubType": "LRM5",
     "MinRange": 0,
@@ -68,9 +71,9 @@
     "HeatDamage": 0,
     "AccuracyModifier": 0,
     "CriticalChanceMultiplier": 0,
-	"APArmorShardsMod": 0,
-	"APMaxArmorThickness": 1,
-	"APCriticalChanceMultiplier": 0.5,
+    "APArmorShardsMod": 0,
+    "APMaxArmorThickness": 1,
+    "APCriticalChanceMultiplier": 0.5,
     "AOECapable": false,
     "IndirectFireCapable": false,
     "RefireModifier": 0,
@@ -111,33 +114,33 @@
     "DisallowedLocations": "All",
     "CriticalComponent": false,
     "statusEffects": [
-	{
-                    "durationData": {
-                        "duration": -1,
-                        "stackLimit": -1
-                    },
-                    "targetingData": {
-                        "effectTriggerType": "Passive",
-                        "effectTargetType": "Creator",
-                        "showInTargetPreview": false,
-                        "showInStatusPanel": false
-                    },
-                    "effectType": "StatisticEffect",
-                    "Description": {
-                        "Id": "BoltOnPenaltySensor",
-                        "Name": "BoltOn Sensor Penalty",
-                        "Details": "Signature Statuseffect.",
-                        "Icon": "uixSvgIcon_equipment_TTS"
-                    },
-                    "nature": "Buff",
-                    "statisticData": {
-                        "statName": "SensorSignatureModifier",
-                        "operation": "Float_Multiply",
-                        "modValue": "1.02",
-                        "modType": "System.Single"
-                    }
-                },
-				{
+        {
+            "durationData": {
+                "duration": -1,
+                "stackLimit": -1
+            },
+            "targetingData": {
+                "effectTriggerType": "Passive",
+                "effectTargetType": "Creator",
+                "showInTargetPreview": false,
+                "showInStatusPanel": false
+            },
+            "effectType": "StatisticEffect",
+            "Description": {
+                "Id": "BoltOnPenaltySensor",
+                "Name": "BoltOn Sensor Penalty",
+                "Details": "Signature Statuseffect.",
+                "Icon": "uixSvgIcon_equipment_TTS"
+            },
+            "nature": "Buff",
+            "statisticData": {
+                "statName": "SensorSignatureModifier",
+                "operation": "Float_Multiply",
+                "modValue": "1.02",
+                "modType": "System.Single"
+            }
+        },
+        {
             "durationData": {
                 "duration": -1,
                 "stackLimit": -1
@@ -163,7 +166,7 @@
                 "modType": "System.Single"
             }
         }
-	],
+    ],
     "ComponentTags": {
         "items": [
             "component_type_stock",
