Single Use Nukes
I'm not entirely happy with the description.  But it exists.

--- a/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -9,7 +9,7 @@
 	"PenetrateAIMult": 0.4,
 	"JamAIAvoid": 1.0,
 	"DamageJamAIAvoid": 2.0,
-	"AmmoCanBeExhausted": false,
+	"AmmoCanBeExhausted": true,
 	"BurningForestDesignMask": "DesignMaskBurningForest",
 	"BurnedForestDesignMask": "DesignMaskBurnedForest",
 	"BurningTerrainDesignMask":"DesignMaskBurningTerrain",
