--- a/RogueModuleTech/Quirks/Weapon/Weapon_LRM_ROCKETLAUNCHER10EX.json
+++ b/RogueModuleTech/Quirks/Weapon/Weapon_LRM_ROCKETLAUNCHER10EX.json
@@ -98,7 +98,8 @@
   "ComponentTags": {
     "items": [
       "component_type_stock",
-      "range_standard"
+      "range_standard",
+	  "BLACKLISTED"
     ],
     "tagSetSourceFile": ""
   }
