Exclude DefendBase from AdditionalLances

--- a/MissionControlRandomX2/settings.json
+++ b/MissionControlRandomX2/settings.json
@@ -17,7 +17,7 @@
   },
   "AdditionalLances": {
     "Enable": true,
-	"ExcludeContractTypes": ["SoloDuel", "DuoDuel", "AttackDefend"],
+	"ExcludeContractTypes": ["SoloDuel", "DuoDuel", "AttackDefend, DefendBase"],
 	"IsPrimaryObjectiveIn": ["SimpleBattle", "ThreeWayBattle", "DestroyBase"],
     "UseElites": false,
     "UseDialogue": true,
