Pirates back in town

--- a/RogueTech Core/Contracts/ambushconvoy/2/AmbushConvoy_Pirate_EasyPickings.json
+++ b/RogueTech Core/Contracts/ambushconvoy/2/AmbushConvoy_Pirate_EasyPickings.json
@@ -27,7 +27,7 @@
             },
             "RequirementComparisons": [
                 {
-                    "obj": "Employer.Locals",
+                    "obj": "Employer.AuriganPirates",
                     "op": "Equal",
                     "val": 1,
                     "valueConstant": null
