--- a/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
+++ b/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
@@ -1,8 +1,10 @@
 {
     "Custom": {
         "Category": [
-			{ "CategoryID": "w/a/o/mortar" }
-		],
+            {
+                "CategoryID": "w/a/o/mortar"
+            }
+        ],
         "InventorySorter": {
             "SortKey": "03011"
         },
@@ -10,7 +12,7 @@
             "Bonuses": [
                 "WpnAccuracy: +1",
                 "Indirect",
-				"NoAA",
+                "NoAA",
                 "IsMortar"
             ]
         }
@@ -36,9 +38,9 @@
     "HeatDamage": 0,
     "AccuracyModifier": -1,
     "CriticalChanceMultiplier": 1,
-	"APArmorShardsMod": 0.5,
-  "APMaxArmorThickness": 40,
-  "APCriticalChanceMultiplier": 0.1,
+    "APArmorShardsMod": 0.5,
+    "APMaxArmorThickness": 40,
+    "APCriticalChanceMultiplier": 0.1,
     "AOECapable": false,
     "IndirectFireCapable": true,
     "RefireModifier": 0,
@@ -46,11 +48,13 @@
     "ProjectilesPerShot": 1,
     "AttackRecoil": 1,
     "Instability": 2,
-	"AMSImmune": true,
-	"AlternateDamageCalc": true,
-	"FireTerrainChance": 0.01,
-	"CantHitUnaffecedByPathing": true,
-	"SpreadRange": 30,
+    "AMSImmune": true,
+    "AlternateDamageCalc": true,
+    "FireTerrainChance": 0.01,
+    "ImprovedBallistic": true,
+    "StatusEffectsPerHit": true,
+    "CantHitUnaffecedByPathing": true,
+    "SpreadRange": 30,
     "WeaponEffectID": "WeaponEffect-Weapon_LRM5",
     "Description": {
         "Cost": 80000,
