adding more spellings of betrayers

--- a/RogueFlashPointModule/settings.json
+++ b/RogueFlashPointModule/settings.json
@@ -31,6 +31,9 @@
 		"Nautilus",
 		"MercenaryReviewBoard",
 		"Betrayers",
+		"betrayers",
+		"Faction_Betrayers",
+           "faction_betrayers",
 		"MagistracyCentrella",
 		"MajestyMetals",
 		"Marauders",
